manifests/workloads/demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-app
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      nodeSelector:
        nodetype: front
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  labels:
    app: front
spec:
  selector:
    app: front
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-app
  labels:
    app: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      nodeSelector:
        nodetype: back
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  labels:
    app: back
spec:
  selector:
    app: back
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-route
spec:
  parentRefs:
  - name: my-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /front
    backendRefs:
    - name: front-svc
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: back-route
spec:
  parentRefs:
  - name: my-gateway
    namespace: default
  hostnames:
  - "backend.local"
  rules:
  - backendRefs:
    - name: back-svc
      port: 80
